<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.TermsDetails">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    <TextView
        android:id="@+id/termName"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/TermName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/termStart"
            android:layout_width="112dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/Start"
            app:layout_constraintStart_toEndOf="@+id/termName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/termEnd"
        android:layout_width="112dp"
        android:layout_height="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:text="@string/End"
        app:layout_constraintEnd_toEndOf="@id/termStart"
        app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <EditText
        android:id="@+id/termnameEdit"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:hint="@string/Fall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termName" />


        <TextView
            android:id="@+id/termStartEdit"
            android:layout_width="112dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/Date"
            android:background="@color/teal_200"
            app:layout_constraintStart_toEndOf="@+id/termname"
            app:layout_constraintTop_toBottomOf="@+id/termStart" />



    <TextView
        android:id="@+id/termEndEdit"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/Date"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toEndOf="@+id/termStartEdit"
        app:layout_constraintTop_toBottomOf="@+id/termEnd" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/saveTerm"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:onClick="saveNewTerm"
            android:text="@string/SaveTerm"
            app:layout_constraintBottom_toBottomOf="@id/termnameEdit"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/courseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/courseInfo"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@id/saveTerm"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



        <Button
            android:id="@+id/addCourse"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:onClick="addCourse"
            android:text="@string/AddCourse"
            app:layout_constraintBottom_toBottomOf="@id/courseText"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>
    </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>