<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="toCourseDetails"
    tools:context=".UI.CourseList">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TermName"></TextView>

                <EditText
                    android:id="@+id/editTermName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:hint="@string/Fall"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Start"></TextView>

                <TextView
                    android:id="@+id/editTermStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@color/teal_200"
                    android:editable="true"
                    android:hint="@string/Date"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/End"></TextView>

                <TextView
                    android:id="@+id/editTermEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:background="@color/teal_200"
                    android:hint="@string/Date"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveTerm"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:onClick="saveTerm"
                    android:text="@string/SaveTerm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/courseListScrollView" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="48dp"
                    android:onClick="onDeleteTerm"
                    android:text="@string/DeleteTerm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/courseListScrollView" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/associatedCourseRecyclerView"
                    android:layout_width="311dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="50dp"
                    android:background="@color/purple_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saveTerm" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/toCourseDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="32dp"
                    android:onClick="toCourseDetails"
                    android:text="@string/AddCourse"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/associatedCourseRecyclerView" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>