<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PerformanceAssessmentUI">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/ObjectiveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/performanceName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/performanceNameEdit"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toEndOf="@+id/ObjectiveName"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/ObjectiveDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/performanceEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObjectiveName" />



    <TextView
        android:id="@+id/performanceDateEdit"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Date"
        android:background="@color/teal_200"
        app:layout_constraintStart_toEndOf="@+id/ObjectiveDate"
        app:layout_constraintTop_toBottomOf="@id/performanceNameEdit" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/courseID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/courseID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ObjectiveDate" />

            <TextView
                android:id="@+id/courseIDEdit"
                android:layout_width="115dp"
                android:layout_height="48dp"
                android:layout_marginStart="144dp"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toEndOf="@+id/courseID"
                app:layout_constraintTop_toBottomOf="@+id/performanceDateEdit" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/performanceRecycler"
            android:layout_width="379dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:background="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseIDEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/saveAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:onClick="saveAssessment"
        android:text="@string/SaveAssessment"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/performanceRecycler"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="25dp"
        android:onClick="deleteAssessment"
        android:text="@string/DeleteAssessment"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/performanceRecycler"
        app:layout_constraintStart_toEndOf="@+id/saveAssessment" />


    </LinearLayout>
    </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>