<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ObjectiveAssessmentUI">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">




    <TextView
        android:id="@+id/ObjectiveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/objectiveName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/objectiveNameEdit"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toEndOf="@+id/ObjectiveName"
        app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/ObjectiveDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/objectiveEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObjectiveName" />




    <TextView
        android:id="@+id/objectiveDateEdit"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:hint="@string/Date"
        android:background="@color/teal_200"
        app:layout_constraintStart_toEndOf="@+id/ObjectiveDate"
        app:layout_constraintTop_toBottomOf="@id/objectiveNameEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/courseID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="35dp"
        android:text="@string/courseID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObjectiveDate" />

    <TextView
        android:id="@+id/courseIDEdit"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/courseID"
        app:layout_constraintTop_toBottomOf="@+id/objectiveDateEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/objectiveRecycler"
        android:layout_width="395dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseIDEdit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    <Button
        android:id="@+id/saveAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="saveObjectiveAssessment"
        android:text="@string/SaveAssessment"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectiveRecycler" />

    <Button
        android:id="@+id/deleteAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:onClick="deleteAssessment"
        android:text="@string/DeleteAssessment"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/saveAssessment"
        app:layout_constraintTop_toBottomOf="@+id/objectiveRecycler" />

    </LinearLayout>
    </LinearLayout>

    </ScrollView>


    <!--<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessments"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>